meu cabeçalho está completo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> vai ter uma imagem aqui</h1>
+    <header class="cabeçalho">
+       <img class="cabeçalho-imagem" src="marvel logo.png" alt="logo da marvel">
+       <ul class="cabeçalho-lista">
+           <li class="cabeçalho-lista-item"></li>
+           <li class="cabeçalho-lista-item"></li>
+       </ul>
+    </header>
+    
 
 </body>
 </html>
