--- a/site-html-css-criativo/index.html
+++ b/site-html-css-criativo/index.html
@@ -28,6 +28,13 @@
     </section>
     <section class="">
         <h2 class=""></h2>
-        <img class="homem-de-ferro"src="homem de ferro.jpg" alt="foto do homem de ferro">
+        <div class="">
+            <img class="capitão-america"src="capitão america.jpg" alt="foto do capitão america">
+            <h3> Capitão America</h3>
+            <img class=""src="" alt="">        
+            <img class=""src="" alt="">
+            <img class=""src="" alt="">
+        </div>
+    </section>
 </body>
-</html>
+</html
