--- a/site-html-css-criativo/index.html
+++ b/site-html-css-criativo/index.html
@@ -1,40 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="widht=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-
-</head>
 <body>
-    <header class="cabeçalho">
-       <img class="cabeçalho-imagem" src="marvel logo.png" alt="logo da marvel">
-       <ul class="cabeçalho-lista">
-           <li class="cabeçalho-lista-item"></li>
-           <li class="cabeçalho-lista-item"></li>
-       </ul>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="marvel logo.png" alt="logo da marvel">
     </header>
-    <section class="">
-        <div class="">
-            <h2 class=""></h2>
-            <p class=""></p>
-            <p class=""></p>
-        </div>
-    </section>
-    <section class="">
-        <h2 class=""></h2>
-        <div class="">
-            <img class="capitão-america"src="capitão america.jpg" alt="foto do capitão america">
-            <h3> Capitão America</h3>
-            <img class=""src="" alt="">        
-            <img class=""src="" alt="">
-            <img class=""src="" alt="">
-        </div>
+    <section class="super heróis">
+      <h2 class="Super-Heróis-titulo">Super Heróis</h2>
     </section>
 </body>
-</html
+    <style>
+        #container{ 
+            display: flex;
+            flex-direction: row;
+        
+      }
+      img{
+          padding-right: 20px;
+        
+          width: 20%;
+          height: 20%;
+      }
+    </style>
+</head>
+<body>
+  <div id="container">
+    <img src="capitão america.jpg" alt="">
+    <p>Capitão América (Steve Rogers):
+    Steve Rogers, um jovem franzino e patriótico, se voluntariou para o projeto do 
+    supersoldado durante a Segunda Guerra Mundial.
+    O soro transforma-o em um símbolo vivo da justiça e da liberdade, o Capitão América.
+    Sua dedicação aos ideais de heroísmo,liderança e sacrifício o tornam uma inspiração
+     para seus companheiros e para o mundo. </p>
+   </div> 
+   <div id="container">
+    <img class="homem-de-ferro-imagem" src="homem de ferro 2 - Copia.jpg" alt="">
+    <p>Homem de Ferro (Tony Stark):
+      Tony Stark, um gênio bilionário e playboy, é conhecido por sua genialidade e personalidade sarcástica. 
+      Após ser sequestrado por terroristas, ele construiu uma armadura tecnologicamente avançada para escapar, 
+      tornando-se o Homem de Ferro. Sua jornada é marcada por evolução pessoal e conflitos éticos, 
+      enquanto lida com as responsabilidades de ser um herói e um líder. </p>
+   </div>
+      <div id="container">
+        <img src="doutor estranho.jpg" alt="">
+        <p>Doutor Estranho (Stephen Strange):
+          Stephen Strange, um cirurgião arrogante e talentoso, tem sua vida transformada após um acidente que danifica suas mãos. 
+          Ele busca cura através da magia, virando o Doutor Estranho e um mestre das artes místicas. Sua jornada é uma busca por conhecimento, 
+          equilíbrio entre poder e responsabilidade e proteção do universo contra ameaças sobrenaturais. </p>
+   </div>  
+   <div id="container">
+    <img src="viúva-negra.webp" alt="">
+    <p>Viúva Negra (Natasha Romanoff):
+      Natasha Romanoff, também conhecida como Viúva Negra, é uma ex-espiã russa com habilidades de combate excepcionais e uma mente astuta. 
+      Criada como uma assassina, ela luta para redimir seu passado sombrio ao se juntar aos Vingadores. 
+      Sua determinação, inteligência e habilidade em manipulação a tornam uma peça crucial na equipe. </p>
+</div>       
+<div id="container">
+  <img src="pantera negra.jpeg" alt="">
+  <p>Pantera Negra (T'Challa):
+    T'Challa, o rei de Wakanda, é conhecido como Pantera Negra, o protetor de sua nação e detentor do poderoso vibranium. 
+    Ele combina habilidades sobre-humanas concedidas pelo coração de Wakanda com um intelecto afiado e uma determinação inabalável. 
+    Sua busca por justiça e seu compromisso com seu povo o colocam em conflitos que testam sua liderança e sua moralidade.
+</div>    
+<div id="container">
+  <img src="feiticeira-escarlate.jpg" alt="">
+  <p>Feiticeira Escarlate (Wanda Maximoff):
+    Wanda Maximoff, também conhecida como Feiticeira Escarlate, é uma poderosa mutante com habilidades de manipulação de energia e 
+    alteração da realidade. Criada em circunstâncias traumáticas, ela luta para controlar seus poderes e encontrar seu lugar no mundo. 
+    Sua jornada é marcada por tragédia, redenção e uma busca por identidade e propósito. </p>
+</div>     
+<div id="container">
+  <img src="visão.jpg" alt="">
+  <p>Visão:
+    Visão é uma entidade sintozóide criada a partir da fusão da inteligência artificial J.A.R.V.I.S. e da Pedra da Mente.
+     Ele possui uma perspectiva única sobre a humanidade, buscando entender e proteger aqueles ao seu redor. 
+     Suas habilidades sobre-humanas, combinadas com sua compaixão e busca por compreensão, o tornam uma presença 
+     essencial nos Vingadores. </p>
+</div>     
+<div id="container">
+  <img src="thor.jpg" alt="">
+  <p>Thor:
+    Thor, o príncipe de Asgard e deus do trovão, é conhecido por sua força sobre-humana, habilidades de combate e controle sobre o clima.
+    Ele luta para provar seu valor e aprender a ser um verdadeiro líder enquanto enfrenta desafios tanto em seu mundo natal 
+    quanto na Terra. Sua jornada é uma mistura de heroísmo, humildade e redenção. </p>
+</div>   
+<div id="container">
+  <img src="homem aranha.jpeg" alt="">
+  <p>Homem-Aranha (Peter Parker):
+    Peter Parker, um adolescente inteligente e tímido, adquire habilidades de aranha após ser picado por uma aranha geneticamente modificada. 
+    Ele luta para conciliar sua vida pessoal com sua responsabilidade como o Homem-Aranha, protegendo Nova York dos criminosos enquanto enfrenta desafios pessoais 
+    e dilemas morais. Sua jornada é de crescimento, aprendizado e auto-descoberta enquanto ele se esforça para fazer o bem como um herói. </p>
+</div>      
+<div id="container">
+  <img src="" alt="">
+  <p>Hulk (Bruce Banner):
+    Bruce Banner, um cientista brilhante, enfrenta uma dualidade constante entre sua inteligência e a monstruosidade que habita dentro de si. 
+    Após ser exposto a radiação gama, ele se transforma no poderoso Hulk quando está com raiva. Sua luta para controlar sua fúria e 
+    proteger os inocentes define sua trajetória, enquanto ele busca uma cura para sua condição. </p>
+</div>    
+</body>
+</html>
